# duckdb-weather

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  devenv.nix  extension_config.cmake
examples/: FORECAST.md  fetch-tampere-forecast.sh  gfs_sample.grib2  grib_to_parquet.py  tampere-weather.sh  tampere-weather.sql  weather_queries.sql
examples/json/: test1.json  test2.json  test3.json
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: fetch_and_ingest.sh  ingest_weather.sql  tampere_weather.sql  upload_to_webdav.sh  weather_pipeline.sql  weather_pipeline_auto.sql  weather_pipeline_global.sql  weather_pipeline_global_fast.sql  weather_pipeline_nordics.sql
src/: gfs_forecast_function.cpp  grib_function.cpp  met_forecast_function.cpp  weather_extension.cpp  weather_function.cpp
src/include/: gfs_forecast_function.hpp  grib2_ffi.h  grib_function.hpp  met_forecast_function.hpp  weather_extension.hpp  weather_function.hpp
